--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">On the shoulders of giants...</div>
         <div class="intro-heading text-uppercase"> something, maybe? </div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://nateej1.github.io/natee-tech-resume/">Technical Résumé</a>
+        <a target=”_blank” class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://nateej1.github.io/natee-tech-resume/">Technical Résumé</a>
       </div>
     </div>
   </header>
