--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Projects</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Sample of my data science projects.</h3>
         </div>
       </div>
       <div class="row">
@@ -166,11 +166,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/AUM-map-preview.png" alt="Absolute Upward Mobility Map">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Intergenerational Economic Mobility</h4>
+            <p class="text-muted">Machine Learning & Mapping</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -180,11 +180,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/crowdfunding-campaigns-min.jpg" alt="Predicting Kickstarter Campaign Outcomes">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Predicting Crowdfunding Campaign Success</h4>
+            <p class="text-muted">Machine Learning & Mapping</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -194,11 +194,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/movie-image.jpg" alt="Movie Analysis">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Making a Movie?</h4>
+            <p class="text-muted">Data Exploration</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
