--- a/index.html
+++ b/index.html
@@ -349,17 +349,17 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <a href="https://nateej1.github.io/natee-tech-resume/">
+          <a href="https://twitter.com/_SimpleJoys">
             <span class="fa-stack fa-4x">
              <i class="fas fa-circle fa-stack-2x text-primary"></i>
              <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
            </span>
           </a>
           <h4 class="service-heading"></h4>
-          <p class="text-muted"> @natee? </p>
+          <p class="text-muted"> @_SimpleJoys </p>
         </div>
         <div class="col-md-4">
-          <a href="https://nateej1.github.io/natee-tech-resume/">
+          <a href="https://github.com/nateej1">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -369,7 +369,7 @@
           <p class="text-muted">nateej1</p>
         </div>
         <div class="col-md-4">
-          <a href="https://nateej1.github.io/natee-tech-resume/">
+          <a href="https://www.linkedin.com/in/natee-johnson/">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
@@ -461,7 +461,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; nateej1.github.io 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
