--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Contact Me</h2>
+          <h3 class="section-subheading text-muted">Questions about my tutoring rates, latest craft project, or most recent data science struggle? Reach out here!</h3>
         </div>
       </div>
       <div class="row">
