updates portfolio section
updated thumbnail for movie analysis and shortened titles

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <img class="img-fluid" src="img/portfolio/AUM-map-preview.png" alt="Absolute Upward Mobility Map">
           </a>
           <div class="portfolio-caption">
-            <h4>Intergenerational Economic Mobility</h4>
+            <h4>U.S. Generational Economic Mobility</h4>
             <p class="text-muted">Machine Learning & Mapping</p>
           </div>
         </div>
@@ -183,7 +183,7 @@
             <img class="img-fluid" src="img/portfolio/crowdfunding-campaigns-min.jpg" alt="Predicting Kickstarter Campaign Outcomes">
           </a>
           <div class="portfolio-caption">
-            <h4>Predicting Crowdfunding Campaign Success</h4>
+            <h4>Predict Crowdfunding Success</h4>
             <p class="text-muted">Machine Learning & Mapping</p>
           </div>
         </div>
@@ -194,7 +194,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/movie-image.jpg" alt="Movie Analysis">
+            <img class="img-fluid" src="img/portfolio/movie-image_2.jpg" alt="Movie Analysis">
           </a>
           <div class="portfolio-caption">
             <h4>Making a Movie?</h4>
