testing triathlon pic
line 276

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/triathlon.jpg" alt="">
             <h4>Triathlon</h4> <!--Biking is my favorite event! I compete in Sprint and Olympic distance races across the Mid-Atlantic region-->
             <p class="text-muted">something fun</p>
             <ul class="list-inline social-buttons"> <!-- could change these buttons to be links to blogs or IG?-->
