--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
       </div>
     </div>
   </section>
- <!-- Team -->
+ 
+  <!-- Team -->
   <section class="bg-light page-section" id="team">
     <div class="container">
       <div class="row">
@@ -297,7 +298,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/photography.jpg" alt="">
             <h4>Photography</h4>
             <p class="text-muted">Landscapes & Night Sky</p>
             <ul class="list-inline social-buttons">
