added crochet thumbnail to index

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/crochet.jpg" alt="">
             <h4>Crochet</h4>
             <p class="text-muted">Yarn Queen</p>
             <ul class="list-inline social-buttons">
