--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">On the shoulders of giants...</div>
-        <div class="intro-heading text-uppercase"> something, maybe? </div>
+        <div class="intro-lead-in">If I have seen further, it is by...</div>
+        <div class="intro-heading text-uppercase"> Standing on the shoulders of giants </div>
         <a target=”_blank” class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://nateej1.github.io/natee-tech-resume/">Technical Résumé</a>
       </div>
     </div>
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Recap of the journey so far.</h3>
+          <h3 class="section-subheading text-muted">To refute self-limiting beliefs, each year I commit to tackling some new thing I deem to be "hard". My purpose - to provide evidence that I can accomplish whatever I put my mind to. And so can you! Here's a sampling of what I've tackled each year since I initiated this personal challenge. </h3>
         </div>
       </div>
       <div class="row">
