--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Nateé is cool!</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"> Adventures of Nateé </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -61,8 +61,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">If I have seen further, it is by...</div>
-        <div class="intro-heading text-uppercase"> Standing on the shoulders of giants </div>
+        <div class="intro-lead-in">If I have seen further, it is by standing on the...</div>
+        <div class="intro-heading text-uppercase"> shoulders of giants </div>
         <a target=”_blank” class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://nateej1.github.io/natee-tech-resume/">Technical Résumé</a>
       </div>
     </div>
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">To refute self-limiting beliefs, each year I commit to tackling some new thing I deem to be "hard". My purpose - to provide evidence that I can accomplish whatever I put my mind to. And so can you! Here's a sampling of what I've tackled each year since I initiated this personal challenge. </h3>
+          <h3 class="section-subheading text-muted">To dismantle self-limiting beliefs, each year I commit to tackling some new thing I deem to be "hard". My purpose - to provide evidence that I can accomplish whatever I put my mind to. And so can you! Here's a sampling of what I've tackled each year since I initiated this personal challenge. </h3>
         </div>
       </div>
       <div class="row">
