updated content for about section
attempted to add two more panels in timeline...it may not alternate correctly.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">To dismantle self-limiting beliefs, each year I commit to tackling some new thing I deem to be "hard". My purpose - to provide evidence that I can accomplish whatever I put my mind to. And so can you! Here's a sampling of what I've tackled each year since I initiated this personal challenge. </h3>
+          <h3 class="section-subheading text-muted">To dismantle self-limiting beliefs, each year I commit to tackling some new thing I deem to be "hard". My purpose - to provide evidence that I can accomplish whatever I set my mind to. And so can you! Here's a sampling of what I've tackled each year since I initiated this personal challenge. </h3>
         </div>
       </div>
       <div class="row">
@@ -83,15 +83,15 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">               
+                <img class="rounded-circle img-fluid" src="img/about/puzzles.jpg" alt="">               
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
+                  <h4>August 2011</h4>
+                  <h4 class="subheading">A Puzzling Beginning</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted"> Jigsaw Puzzles! Have you ever stared at 1000 dusty pieces chaotically strewn across a table?! An intimidating sight indeed. My first baby step in conquering self-doubt and rebuking fear! </p>
                 </div>
               </div>
             </li>
@@ -101,11 +101,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
+                  <h4>2012</h4>
+                  <h4 class="subheading">A Rider Is Born</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted"> I decided to tackle the world of cycling - not having ridden a bike for nearly a decade. I had some regrets about making such a commitment in the hilly streets of Pittsburgh, PA. Add story of building up to MS 150</p>
                 </div>
               </div>
             </li>
@@ -115,8 +115,8 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
+                  <h4>2013</h4>
+                  <h4 class="subheading">A Runner Is Born</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -129,8 +129,8 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
+                  <h4>2014</h4>
+                  <h4 class="subheading"> Solo Travel Commences </h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -144,8 +144,36 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
+                  <h4>2015</h4>
+                  <h4 class="subheading">Bringing It All Togther</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">The year of Triathlon! </p>
+                </div>
+              </div>
+            </li>
+             <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>2016</h4>
+                  <h4 class="subheading">Choosing Me First</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Making the uncomfortable decision to take leave from my doctoral program</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>2014</h4>
+                  <h4 class="subheading"> Solo Travel Commences </h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -154,9 +182,9 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
+                <h4>What
+                  <br>Shall Be
+                  <br>Next?!</h4>
               </div>
             </li>
           </ul>
