added bike pic & adjusted panel layout

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/about/bike.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -152,20 +152,7 @@
                 </div>
               </div>
             </li>
-             <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>2016</h4>
-                  <h4 class="subheading">Choosing Me First</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Making the uncomfortable decision to take leave from my doctoral program</p>
-                </div>
-              </div>
-            </li>
+             
             <li class="timeline-inverted">
               <div class="timeline-image">
                 <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
@@ -177,6 +164,21 @@
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                </div>
+              </div>
+            </li>
+            
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>2016</h4>
+                  <h4 class="subheading">Choosing Me First</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Making the uncomfortable decision to take leave from my doctoral program</p>
                 </div>
               </div>
             </li>
