Fixed formatting of Contact section
Added fourth icon to be used for IG

--- a/index.html
+++ b/index.html
@@ -398,7 +398,8 @@
   
   
  
-  <!-- Clients --> <!-- might get rid of this section...figure out how to comment it out-->
+  <!-- Clients <!-- might get rid of this section...figure out how to comment it out
+
   <section class="py-5">
     <div class="container">
       <div class="row">
@@ -426,6 +427,8 @@
     </div>
   </section>
 
+--- END COMMENTED OUT SECTION -->
+  
   <!-- Contact -->
   <section class="page-section" id="contact">
     <div class="container">
@@ -439,12 +442,6 @@
       <!-- Services --> <!-- Social Media Contact Section -->
   <!-- <section class="page-section" id="services"> -->
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Social Media</h2>
-          <h3 class="section-subheading text-muted"></h3>
-        </div>
-      </div>
       <div class="row text-center">
         <div class="col-md-4">
           <a href="https://twitter.com/_SimpleJoys">
@@ -475,6 +472,16 @@
           </a>
           <h4 class="service-heading"></h4>
           <p class="text-muted">natee-johnson</p>
+        </div>
+        <div class="col-md-4">
+          <a href="https://twitter.com/_SimpleJoys">
+            <span class="fa-stack fa-4x">
+             <i class="fas fa-circle fa-stack-2x text-primary"></i>
+             <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+           </span>
+          </a>
+          <h4 class="service-heading"></h4>
+          <p class="text-muted"> @_SimpleJoys </p>
         </div>
       </div>
     </div>
