--- a/index.html
+++ b/index.html
@@ -443,45 +443,45 @@
   <!-- <section class="page-section" id="services"> -->
     <div class="container">
       <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <a href="https://twitter.com/_SimpleJoys">
-            <span class="fa-stack fa-4x">
+            <span class="fa-stack fa-3x">
              <i class="fas fa-circle fa-stack-2x text-primary"></i>
              <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
            </span>
           </a>
-          <h4 class="service-heading"></h4>
-          <p class="text-muted"> @_SimpleJoys </p>
+          <h4 style="color:white" class="service-heading"> @_SimpleJoys </h4>
+          <p class="text-muted"> </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <a href="https://github.com/nateej1">
-            <span class="fa-stack fa-4x">
+            <span class="fa-stack fa-3x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fab fa-github fa-stack-1x fa-inverse"></i>
             </span>
           </a>
-          <h4 class="service-heading"></h4>
-          <p class="text-muted">nateej1</p>
+          <h4 style="color:white" class="service-heading"> nateej1 </h4>
+          <p class="text-muted"></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <a href="https://www.linkedin.com/in/natee-johnson/">
-            <span class="fa-stack fa-4x">
+            <span class="fa-stack fa-3x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
             </span>
           </a>
-          <h4 class="service-heading"></h4>
-          <p class="text-muted">natee-johnson</p>
+          <h4 class="service-heading"> natee-johnson </h4>
+          <p class="text-muted"></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <a href="https://twitter.com/_SimpleJoys">
-            <span class="fa-stack fa-4x">
+            <span class="fa-stack fa-3x">
              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-             <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+             <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
            </span>
           </a>
-          <h4 class="service-heading"></h4>
-          <p class="text-muted"> @_SimpleJoys </p>
+          <h4 style="color:white" class="service-heading">  @_SimpleJoys </h4>
+          <p class="text-muted"></p>
         </div>
       </div>
     </div>
@@ -489,7 +489,7 @@
  
       
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12" style="padding-top: 30px">
           <form id="contactForm" name="sentMessage" novalidate="novalidate">
             <div class="row">
               <div class="col-md-6">
