--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Me</h2>
-          <h3 class="section-subheading text-muted">Questions about my tutoring rates, latest craft project, or most recent data science struggle? Reach out here!</h3>
+          <h3 class="section-subheading">Questions about my tutoring rates, latest craft project, or most recent data science struggle? Reach out here!</h3>
         </div>
       </div>
       
