--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
               <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
             </span>
           </a>
-          <h4 class="service-heading"> natee-johnson </h4>
+          <h4 style="color:white" class="service-heading"> natee-johnson </h4>
           <p class="text-muted"></p>
         </div>
         <div class="col-md-3">
@@ -489,7 +489,7 @@
  
       
       <div class="row">
-        <div class="col-lg-12" style="padding-top: 30px">
+        <div class="col-lg-12" style="padding-top: 50px">
           <form id="contactForm" name="sentMessage" novalidate="novalidate">
             <div class="row">
               <div class="col-md-6">
