Updated project section content

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a class="nav-link js-scroll-trigger" href="#team">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
@@ -175,7 +175,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
+          <h2 class="section-heading text-uppercase">About Me</h2>
           <h3 class="section-subheading text-muted">To dismantle self-limiting beliefs, each year I commit to tackling some new thing I deem to be "hard". My purpose - to provide evidence that I can accomplish whatever I set my mind to. And so can you! Here's a sampling of what I've tackled each year since I initiated this personal challenge. </h3>
         </div>
       </div>
@@ -188,7 +188,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>August 2011</h4>
+                  <h4>2011</h4>
                   <h4 class="subheading">A Puzzling Beginning</h4>
                 </div>
                 <div class="timeline-body">
@@ -275,11 +275,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2016</h4>
+                  <h4>2018</h4>
                   <h4 class="subheading">Choosing Me First</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Making the uncomfortable decision to take leave from my doctoral program</p>
+                  <p class="text-muted">As a recovering people-pleaser, I made the uncomfortable decision to put my self-care as my top priority. The results, which consisted of successes and failures, were amazing.</p>
                 </div>
               </div>
             </li>
@@ -302,7 +302,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Projects</h2>
-          <h3 class="section-subheading text-muted">Sample of my data science projects.</h3>
+          <h3 class="section-subheading text-muted">Here's a sampling of my data science and craft projects.</h3>
         </div>
       </div>
       <div class="row">
@@ -330,7 +330,7 @@
             <img class="img-fluid" src="img/portfolio/crowdfunding-campaigns-min.jpg" alt="Predicting Kickstarter Campaign Outcomes">
           </a>
           <div class="portfolio-caption">
-            <h4>Predict Crowdfunding Success</h4>
+            <h4>Crowdfunding Predictions</h4>
             <p class="text-muted">Machine Learning & Mapping</p>
           </div>
         </div>
@@ -358,7 +358,7 @@
             <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
+            <h4>Home Decor Upcycling</h4>
             <p class="text-muted">Branding</p>
           </div>
         </div>
