updating AUM map pic
Testing out why the pixel dimensions of the pic in this box won't cooperate. Replacing with a pic that already works.

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/AUM-map-preview.png" alt="Absolute Upward Mobility Map">
+            <img class="img-fluid" src="img/portfolio/crowdfunding-campaigns-min.jpg" alt="Absolute Upward Mobility Map">
           </a>
           <div class="portfolio-caption">
             <h4>U.S. Generational Economic Mobility</h4>
@@ -344,7 +344,7 @@
             <img class="img-fluid" src="img/portfolio/movie-image.jpg" alt="Movie Analysis">
           </a>
           <div class="portfolio-caption">
-            <h4>Making a Movie?</h4>
+            <h4>Analyzing Movie Market</h4>
             <p class="text-muted">Data Exploration</p>
           </div>
         </div>
@@ -372,7 +372,7 @@
             <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Southwest</h4>
+            <h4>Custom Notebook Covers</h4>
             <p class="text-muted">Website Design</p>
           </div>
         </div>
@@ -386,7 +386,7 @@
             <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Window</h4>
+            <h4>Home Team Earwarmers</h4>
             <p class="text-muted">Photography</p>
           </div>
         </div>
