--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     </div>
  <!-- </section> -->
  
-      
+<!-- Removing Contact Form       
       <div class="row">
         <div class="col-lg-12" style="padding-top: 50px">
           <form id="contactForm" name="sentMessage" novalidate="novalidate">
@@ -524,6 +524,8 @@
     </div>
   </section>
 
+-->
+      
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
