--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; nateej1.github.io 2020</span>
+          <span style="color:#fed136" class="copyright">Copyright &copy; nateej1.github.io 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
